styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');

@font-face {
    font-family: "anakotmai-bold";
    src: local("anakotmai-bold"),
        url("./fonts/anakotmai-bold.woff") format("woff");
}

@font-face {
    font-family: "anakotmai-medium";
    src: local("anakotmai-medium"),
        url("./fonts/anakotmai-medium.woff") format("woff");
}

@font-face {
    font-family: "anakotmai-light";
    src: local("anakotmai-light"),
        url("./fonts/anakotmai-light.woff") format("woff");
}

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply w-screen max-h-full text-white bg-gradient-to-tr from-primary-500 to-secondary-500 font-anakotmai-light overflow-x-hidden;
}

.logo {
    max-width: 65px;
}

.text-field::placeholder{
   @apply font-anakotmai-light text-gray-400;
}

.input-field {
    @apply text-field border rounded-md shadow-inner p-3 my-2 w-full font-anakotmai-medium text-black;
}

.error-field {
    @apply border-red-500 bg-red-100 border;
}

.overlay {
    @apply fixed inset-0 backdrop-filter backdrop-blur-3xl w-screen h-screen z-10;
}

.date-picker-btn {
    @apply bg-white p-2 text-black rounded-md cursor-pointer shadow-md;
}

.svg-alert {
    width: 1200px;
    position: fixed;
    top: -430px;
    right: -300px;
    z-index: 0;
}

